edits resume section

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ Author: Lenard Villestas
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Goal-driven, versatile, and adept I am very excited to work in Calgary's growing tech industry. I have a background in IT Support, Telecommunications and Graphic Design. Currently I am aspiring towards being a full stack developer. I am experienced working with teams, solving problems and adapting under pressure to achieve certain goals.</p>
+          <p>I am a graphic and web designer with a passion for programming. Goal-driven, versatile, and adept, I am aspiring towards being a full stack developer and is very excited to be a part of Calgary's growing tech industry. I have a background in IT Support, Telecommunications, Graphic Design, and is experienced working with teams to solve problems and adapting under pressure to achieve certain goals.</p>
         </div>
 
         <div class="row">
@@ -103,7 +103,7 @@ Author: Lenard Villestas
             <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <h3>Aspiring Software &amp; Web Application Developer.</h3>
+            <h3>Aspiring Full Stack Software &amp; Web Application Developer.</h3>
             <p class="fst-italic">
               
             </p>
@@ -208,7 +208,6 @@ Author: Lenard Villestas
 
         <div class="section-title">
           <h2>Resume</h2>
-          <p>Goal-driven, versatile, and adept I am very excited to work in Calgary's growing tech industry. I have a background in IT Support, Telecommunications and Graphic Design. Currently I am aspiring towards being a full stack developer. I am experienced working with teams, solving problems and adapting under pressure to achieve certain goals.</p>
         </div>
 
         <div class="row">
@@ -216,50 +215,59 @@ Author: Lenard Villestas
             <h3 class="resume-title">Sumary</h3>
             <div class="resume-item pb-0">
               <h4>Lenard Villestas</h4>
-              <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
+              <p><em>I am a graphic and web designer with a passion for programming. Goal-driven, versatile, and adept, I am aspiring towards being a full stack developer and is very excited to be a part of Calgary's growing tech industry. I have a background in IT Support, Telecommunications, Graphic Design, and is experienced working with teams to solve problems and adapting under pressure to achieve certain goals.</em></p>
               <ul>
-                <li>Portland par 127,Orlando, FL</li>
-                <li>(123) 456-7891</li>
-                <li>alice.barkley@example.com</li>
+                <li>Calgary, AB</li>
+                <li>587-966-1436</li>
+                <li>lenard.villestas@outlook.com</li>
               </ul>
             </div>
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Master of Fine Arts &amp; Graphic Design</h4>
-              <h5>2015 - 2016</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
+              <h4>Software Development - Diploma</h4>
+              <h5>2021 - 2023</h5>
+              <p><em>SAIT, Calgary, AB</em></p>
+              <p>Learned full stack programming hands-on with experts from the tech industry. I learned essential skills and in demand languages such as Java, JavaScript, SQL, React, etc.</p>
             </div>
             <div class="resume-item">
-              <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
-              <h5>2010 - 2014</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
+              <h4>Telecommunications Systems - Diploma</h4>
+              <h5>2018 - 2020</h5>
+              <p><em>SAIT, Calgary, AB</em></p>
+              <p>(3.89) Learned to design, plan, and optimize computer network systems. Received in-depth training installing, configuring, comissioning, integrating, maintaining, and administering voice, data, and video networks.</p>
             </div>
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Senior graphic design specialist</h4>
-              <h5>2019 - Present</h5>
+              <h4>Graphic Designer/IT Support (Freelance)</h4>
+              <h5>2022 - Present</h5>
               <p><em>Experion, New York, NY </em></p>
               <ul>
-                <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+                <li>Maintaining business' website</li>
+                <li>Supporting small businesses with IT service</li>
+                <li>Creating and designing marketing materials (i.e. posters,social media content,video editing, etc.).</li>
+                <li>Doing general Graphic design work such as designing logos and business cards.</li>
+
               </ul>
             </div>
             <div class="resume-item">
-              <h4>Graphic design specialist</h4>
-              <h5>2017 - 2018</h5>
-              <p><em>Stepping Stone Advertising, New York, NY</em></p>
+              <h4>Computer Technician</h4>
+              <h5>2021 - 2022</h5>
+              <p><em>ERA , Calgary, AB</em></p>
               <ul>
-                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
+                <li>Process computer hardware (desktops,laptops,components,networking equipments) for repair or refurbishing.</li>
+                <li>Handling customer orders and inventory</li>
+
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4>Student Assistant</h4>
+              <h5>2019 - 2020</h5>
+              <p><em>SAIT , Calgary, AB</em></p>
+              <ul>
+                <li>Supervise lab rooms after school hours.</li>
+                <li>Aid students with doing lab works.</li>
               </ul>
             </div>
           </div>
