updates about section

--- a/index.html
+++ b/index.html
@@ -125,8 +125,9 @@ Author: Lenard Villestas
               </div>
             </div>
             <p>
-              Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
-              Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque. Aliquid amet quidem ut quaerat cupiditate. Ab et eum qui repellendus omnis culpa magni laudantium dolores.
+              I enjoy problem solving, collaborating with a team, and learning new things. These are some of the main reasons why I got attracted to working in IT.
+              I also find satisfaction in helping other people with my skills, may it be clients or co-workers.
+              I love the process of creating something so useful, fun, or elegant with programming and customizing it to make it pleasing and beautiful.
             </p>
           </div>
         </div>
