--- a/index.html
+++ b/index.html
@@ -143,7 +143,6 @@ Author: Lenard Villestas
 
         <div class="section-title">
           <h2>Skills</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
         </div>
 
         <div class="row skills-content">
@@ -241,9 +240,9 @@ Author: Lenard Villestas
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Graphic Designer/IT Support (Freelance)</h4>
+              <h4>Graphic Designer/IT Support (Freelance/Part-Time)</h4>
               <h5>2022 - Present</h5>
-              <p><em>Experion, New York, NY </em></p>
+              <p><em>Calgary, AB </em></p>
               <ul>
                 <li>Maintaining business' website</li>
                 <li>Supporting small businesses with IT service</li>
@@ -283,7 +282,6 @@ Author: Lenard Villestas
 
         <div class="section-title">
           <h2>Portfolio</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
         </div>
 
         <div class="row" data-aos="fade-up">
