updates date of a project

--- a/index.html
+++ b/index.html
@@ -326,6 +326,7 @@ Author: Lenard Villestas
               </div>
             </div>
           </div>
+        <!-- add graphic projects here-->
           <div class="col-lg-4 col-md-6 portfolio-item filter-graphic">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
