--- a/portfolio/portfolio-details_leahv.html
+++ b/portfolio/portfolio-details_leahv.html
@@ -120,7 +120,7 @@
               <ul>
                 <li><strong>Category</strong>: Web design</li>
                 <li><strong>Client</strong>: LeahV Skincare and Laser Clinic</li>
-                <li><strong>Project date</strong>: 01 March, 2020</li>
+                <li><strong>Project date</strong>: August, 2019</li>
                 <li><strong>Project URL</strong>: <a href="#">www.leahvskincare.com</a></li>
               </ul>
             </div>
