EXTRA UPDATE - dont mind
this is outside the deadline - just adding some more content for my website

adds assignment 2 for projects in portfolio section

--- a/index.html
+++ b/index.html
@@ -310,10 +310,10 @@ Author: Lenard Villestas
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+              <img src="./assets/img/portfolio/flightFinder_app.PNG" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="./assets/img/portfolio/flightFinder_app.PNG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
+                <a href="./portfolio/portfolio-details_flightFinder.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -321,21 +321,13 @@ Author: Lenard Villestas
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/leahv_web.PNG" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/leahv_web.PNG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
                 <a href="./portfolio/portfolio-details_leahv.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
         <!-- add graphic projects here-->
-          <div class="col-lg-4 col-md-6 portfolio-item filter-graphic">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-7.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 1"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
+          
 
 
         </div>
