--- a/portfolio/portfolio-details_flightFinder.html
+++ b/portfolio/portfolio-details_flightFinder.html
@@ -73,7 +73,7 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>LeahV Skincare and Laser Clinic Website</h2>
+          <h2>Flight Finder (Pure Java)</h2>
           <ol>
             <li><a href="../index.html">Home</a></li>
             <li>Project detail</li>
@@ -94,20 +94,17 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/leahv_web.PNG" alt="">
+                  <img src="../assets/img/portfolio/flightFinder_app.PNG" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/leahv_web_1.PNG" alt="">
+                  <img src="../assets/img/portfolio/flightFinder_app1.PNG" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/leahv_web_2.PNG" alt="">
+                  <img src="../assets/img/portfolio/flightFinder_app2.PNG" alt="">
                 </div>
 
-                <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/leahv_web_3.PNG" alt="">
-                </div>
 
               </div>
               <div class="swiper-pagination"></div>
@@ -118,16 +115,16 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: Web design</li>
-                <li><strong>Client</strong>: LeahV Skincare and Laser Clinic</li>
-                <li><strong>Project date</strong>: August, 2019</li>
-                <li><strong>Project URL</strong>: <a href="https://www.leahvskincare.com" target="_blank">www.leahvskincare.com</a></li>
+                <li><strong>Category</strong>: Application</li>
+                <li><strong>Client</strong>: SAIT Assignment</li>
+                <li><strong>Project date</strong>: March 2022</li>
+                <li><strong>Project URL</strong>: <a href="https://github.com/lenard-villestas/JAVA_Assignment2" target="_blank">Flight Finder Github</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>leahvskincare.com</h2>
+              <h2>Flight Finder (Pure Java)</h2>
               <p>
-                One of my earliest project, a website that I designed and built for a clinic. With custom branding, interactive features, shop, etc.
+                A java assignment I did with a group while attending SAIT. It has a GUI built with java swing, and allows user to find flights and reservations. The data used is taken from an array of text(acts like a simple database) provided by the user.
               </p>
             </div>
           </div>
